# plugins

TestPlugin/: CMakeLists.txt
TestPlugin/resource/: Test_editor.uidesc
TestPlugin/source/: Test_cids.h  Test_controller.cpp  Test_controller.h  Test_entry.cpp  Test_processor.cpp  Test_processor.h  version.h
